# paperclip

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  worker.py
api/: __init__.py  dependencies.py  main.py  middleware.py
api/routes/: ab_tests.py  analytics.py  health.py  jobs.py  projects.py  scripts.py  sources.py  videos.py
config/: __init__.py  database.py  logging.py  providers.py  settings.py
core/: ab_test_service.py  exceptions.py  services.py
core/domain/: __init__.py  entities.py  repositories.py  value_objects.py
db/: README.md  migrate.sh  repositories.py
db/migrations/: 0001_init.sql  0002_app_schema.sql  010_projects_documents.sql  020_content_extraction_analysis.sql  030_script_generation.sql  040_visual_content_creation.sql  050_video_production_assembly.sql  060_processing_pipeline_analytics.sql  070_user_management_configuration.sql
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/callback/: page.tsx
frontend/src/app/papers/: page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/components/auth/: AuthModal.tsx
frontend/src/components/layout/: Header.tsx  NotebookLayout.tsx
frontend/src/components/providers/: SupabaseProvider.tsx
frontend/src/lib/: api.ts  supabase.ts
generators/: __init__.py
generators/providers/: __init__.py  base.py  luma.py  pika.py  runway.py  template.py
generators/video/: __init__.py  generator.py
processors/: __init__.py  pipeline.py
processors/content/: __init__.py  analyzer.py
processors/pdf/: __init__.py  processor.py  structured_processor.py
processors/script/: __init__.py  generator.py
processors/text/: __init__.py  processor.py
processors/url/: __init__.py  processor.py
